<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_e_mail">Enter E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-Mail</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="to_do">ToDo List</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dash_logout">Logout</string>
    <string name="dash_change_pw">Change Password</string>
    <string name="todo_logo">ToDo_logo</string>
    <string name="event">Calendar</string>
    <string name="event_title">Event Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="add_event">Add Event</string>
    <string name="add_profile">Profile</string>


</resources>